--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url(/images/NewBackground.jpg) no-repeat center/cover;
+  background: url(./images/NewBackground.jpg) no-repeat center/cover;
   color: #AD8E70;
 }
 
