--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,11 @@ tr:hover td {
     100% { transform: translateY(0); }
   }
   
-  /* Apply the animation to the coffee cup */
+
   .animated-png {
     animation: pulse 2s infinite;
-    -webkit-animation:sip 5s 0; /* Safari and Chrome */
-    animation:sip 5s 20;
+    -webkit-animation:sip 5s 20; 
+    animation:sip 5s infinite;
     position: fixed;
     margin-top: 108px;
     margin-left: 78px;
